--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=hospital-seguro
-spring.datasource.url=jdbc:mysql://localhost/hospital-seguro?createDatabaseIfNotExist=true
+spring.application.name=hospital_seguro
+spring.datasource.url=jdbc:mysql://localhost/hospital_seguro?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=SenhaMysql18.
 
